<resources>
    <string name="app_name">Usedado</string>
    <!-- Login Page -->
    <string name="Sign_In">Sign IN</string>
    <string name="Sign_Up">Sign UP</string>
    <string name="DontHaveAnAccount">Don´t have an account ? SIGN UP</string>
    <string name="AlreadyHaveAnAccount">Already have an account ? SIGN IN</string>
    <string name="ForgotPassword">Forgot your Password?</string>

    <!-- Profile Page -->
    <string name="Advertisments">Advertisments</string>
    <string name="Messages">Messages</string>
    <string name="Member">Member</string>
    <string name="Email">Email-Address</string>
    <string name="Phone">Phone-Number</string>
    <string name="Address">Address</string>
    <string name="Birthday">Member since</string>
    <string name="Password">Password</string>
    <string name="title_activity_messages">Messages</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recently_trending">Derzeit Beliebt</string>


</resources>