<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/green_gradient">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="55dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:id="@+id/profile_back"
                android:src="@drawable/ic_arrow_back_ios"
                android:layout_height="55dp" />

            <ImageView
                android:layout_width="45dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                android:layout_alignParentRight="true"
                android:id="@+id/profile_logout"
                android:src="@drawable/ic_baseline_power_settings_new_24"
                android:layout_height="45dp" />
            <ImageView
                android:background="@color/colorDarkWhite"
                android:id="@+id/profile_picture"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp"
                ></ImageView>
            <TextView
                android:id="@+id/profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tobias Bressler"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:maxLines="1"
                android:textSize="30dp"
                android:layout_marginTop="130dp"
                android:textStyle="bold"
                ></TextView>
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="-50dp"
        android:background="@drawable/profile_overview"
        android:padding="15dp"
        android:elevation="2dp">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Advertisments"
                android:textAlignment="center"
                android:textSize="15dp"></TextView>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:text="@string/Messages"></TextView>
            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/Member"
                android:textSize="15dp"></TextView>

        </LinearLayout>
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:layout_weight="1"
                android:id="@+id/profile_ads"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/main_font"
                android:text="error"></TextView>
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textSize="18dp"
                android:id="@+id/profile_messages"
                android:textColor="@color/main_font"
                android:text="error"></TextView>
            <TextView
                android:layout_weight="1"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:id="@+id/profile_member"
                android:textSize="18dp"
                android:textColor="@color/main_font"
                android:text="error"></TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:id="@+id/profile_changeEmail"
                    android:orientation="horizontal">
               <ImageView
                   android:layout_height="60dp"
                   android:layout_width="60dp"
                   android:layout_gravity="center"
                   android:src="@drawable/ic_baseline_email_24"
                   android:padding="6dp"
                   app:tint="@color/main_font"

                   ></ImageView>
               <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_marginLeft="15dp"
                  >
                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/Email"
                      android:textColor="@color/main_font"
                      android:textStyle="bold"
                      android:gravity="center_vertical"
                      ></TextView>
                  <TextView
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="tobi@gmail.at"
                      android:id="@+id/profile_email"
                      ></TextView>
              </LinearLayout>
                </LinearLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                    android:clickable="true"
                    android:id="@+id/profile_changePhone"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="60dp"
                    android:layout_width="60dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_local_phone_24"
                    android:padding="6dp"
                    app:tint="@color/main_font"
                    ></ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Phone"
                        android:textColor="@color/main_font"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        ></TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="error by getting data!"
                        android:id="@+id/profile_phone"
                        ></TextView>
                </LinearLayout>
            </LinearLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                    android:clickable="true"
                    android:id="@+id/profile_changeAddress"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="60dp"
                    android:layout_width="60dp"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    app:tint="@color/main_font"
                    android:src="@drawable/ic_baseline_location_on_24"></ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Address"
                        android:textColor="@color/main_font"
                        android:textStyle="bold"
                        android:gravity="center_vertical"

                        ></TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/profile_address"
                        android:text="error by getting data!"
                        ></TextView>
                </LinearLayout>
            </LinearLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                    android:clickable="true"
                    android:id="@+id/profile_changeBirthday"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="60dp"
                    android:layout_width="60dp"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    app:tint="@color/main_font"
                    android:src="@drawable/ic_baseline_date_range_24"></ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Birthday"
                        android:textColor="@color/main_font"
                        android:textStyle="bold"
                        android:gravity="center_vertical"

                        ></TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/profile_birthday"
                        android:text="error by getting data!"
                        ></TextView>
                </LinearLayout>
            </LinearLayout>
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                    android:clickable="true"
                    android:id="@+id/profile_changePassword"
                android:orientation="horizontal">
                <ImageView
                    android:layout_height="60dp"
                    android:layout_width="60dp"
                    android:layout_gravity="center"
                    android:padding="6dp"
                    app:tint="@color/main_font"
                    android:src="@drawable/ic_baseline_security_24"></ImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginLeft="15dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Password"
                        android:textColor="@color/main_font"
                        android:textStyle="bold"
                        android:gravity="center_vertical"
                        ></TextView>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textPassword"
                        android:id="@+id/profile_password"
                        android:text="Passw0rd"
                        ></TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
